# KonevCV

./: .gitignore  CMakeLists.txt  README.md  build.vs.2019.cmake  build.vs.2022.cmake
prj.labs/: CMakeLists.txt
prj.labs/lab01/: lab01.cpp  lab01.report.md.in.txt
prj.labs/lab02/: lab02.cpp
prj.labs/lab03/: CMakeLists.txt  lab03.cpp  lab03.report.md.in.txt
prj.labs/lab04/: CMakeLists.txt  lab04.cpp  lab04.report.md.in.txt
prj.labs/task/: CMakeLists.txt  task.cpp  task.report.md.in.txt
